Add some product apis
