# api/admin.py
@@ -1,5 +1,5 @@
 from django.contrib import admin
-from .models import User
+from .models import User, Product, Category, CartItem
 from django.contrib.auth.admin import UserAdmin
 
 
@@ -8,3 +8,6 @@ class ZibanUserAdmin(UserAdmin):
 
 
 admin.site.register(User, ZibanUserAdmin)
+admin.site.register(Product)
+admin.site.register(Category)
+admin.site.register(CartItem)
